관리자 펀딩 막기

--- a/src/main/resources/templates/admin/component/sidebar.html
+++ b/src/main/resources/templates/admin/component/sidebar.html
@@ -169,7 +169,7 @@
           </svg>
         </a>
         <!-- 펀딩 관리  -->
-        <a th:href="@{/admin/funding}" class="sidebar__menu">
+        <a th:href="@{/ready-admin}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
