--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -80,22 +80,22 @@
                             <li>
                                 <dl>
                                     <dt id="paragraph-title" th:text="${supportRequestDTO.supportRequestContent}">“아빠의 진단 이후, 가족의 삶이 달라졌어요.”</dt>
-                                    <dd id="paragraph-content" >
-                                        “아빠가 응급실로 실려 간 후, 상상도 못한 루게릭병이라는 진단을 받고 기관절개와 콧줄을 삽입하게 된 건 한순간이었어요. 가족끼리 대공원에 가자는 약속을 미루고만 있었는데, 아빠는 이제 움직일 수 없고, 대화도 할 수 없고 음식도 못 드시게 되어서 하루 종일 누워만 계세요.” -환우 가족의 루게릭병 수기공모전 수상작 ‘아빠, 사랑해요!’ 中
-                                        <br> 
-                                        아빠의 루게릭병 진단 이후, 채경이(가명) 가족은 이전과 완전히 달라졌습니다. 아빠의 24시간 간병을 위해 엄마는 한 번도 쉬지 않았던 일을 정리했고, 365일 매일 같이 장사를 나가던 아빠도, 엄마도 하루아침에 온전히 집을 떠날 수 없는 상황이 되었습니다. 채경이에게 늘 건강하게만 커달라던 아빠는 지금 이 순간에도 가장 자주 하는 문자가 ‘건강해라’지만, 이제는 너무 가슴 아픈 말이 되어버렸습니다.</dd>
-                                    </dd>
+<!--                                    <dd id="paragraph-content" >-->
+<!--                                        “아빠가 응급실로 실려 간 후, 상상도 못한 루게릭병이라는 진단을 받고 기관절개와 콧줄을 삽입하게 된 건 한순간이었어요. 가족끼리 대공원에 가자는 약속을 미루고만 있었는데, 아빠는 이제 움직일 수 없고, 대화도 할 수 없고 음식도 못 드시게 되어서 하루 종일 누워만 계세요.” -환우 가족의 루게릭병 수기공모전 수상작 ‘아빠, 사랑해요!’ 中-->
+<!--                                        <br> -->
+<!--                                        아빠의 루게릭병 진단 이후, 채경이(가명) 가족은 이전과 완전히 달라졌습니다. 아빠의 24시간 간병을 위해 엄마는 한 번도 쉬지 않았던 일을 정리했고, 365일 매일 같이 장사를 나가던 아빠도, 엄마도 하루아침에 온전히 집을 떠날 수 없는 상황이 되었습니다. 채경이에게 늘 건강하게만 커달라던 아빠는 지금 이 순간에도 가장 자주 하는 문자가 ‘건강해라’지만, 이제는 너무 가슴 아픈 말이 되어버렸습니다.</dd>-->
+<!--                                    </dd>-->
                                 </dl>
                             </li>
                             <li>
-                                <dl>
-                                    <dt id="paragraph-title">“엄마의 월급보다 간병비 300만원이 더 비싸요”</dt>
-                                    <dd id="paragraph-content">
-                                        채경이(가명) 아빠가 겪고 있는 루게릭병은 인지능력과 감각은 그대로 있지만, 운동신경세포의 손상으로 인해 몸을 움직일 수 없게 되는 병입니다. 스스로는 숨을 쉬는 것도, 말하거나 밥을 먹는 것조차 어려워 누군가의 24시간 도움이 있어야만 합니다.
-                                        <br> 
-                                        간병인을 구해야 하지만, 간병인을 고용하게 되면 평균 비용은 하루에 10만원, 매월 300만원입니다. 웬만한 월급보다도 높은 간병비를 부담할 자신이 없는 엄마는 결국 다니던 직장을 그만둘 수 밖에 없었고, 이제는 온종일 아빠의 간병에 매달리고 있습니다. 아직까지 원인도 치료방법도 밝혀지지 않은 루게릭병. 언제까지 이러한 생활을 이어가야 할지도 알 수 없어 막막하지만, 엄마는 출근하는 대신 오늘도 24시간 꼬박 아빠의 곁을 지키고 있습니다.
-                                    </dd>
-                                </dl>
+<!--                                <dl>-->
+<!--                                    <dt id="paragraph-title">“엄마의 월급보다 간병비 300만원이 더 비싸요”</dt>-->
+<!--                                    <dd id="paragraph-content">-->
+<!--                                        채경이(가명) 아빠가 겪고 있는 루게릭병은 인지능력과 감각은 그대로 있지만, 운동신경세포의 손상으로 인해 몸을 움직일 수 없게 되는 병입니다. 스스로는 숨을 쉬는 것도, 말하거나 밥을 먹는 것조차 어려워 누군가의 24시간 도움이 있어야만 합니다.-->
+<!--                                        <br> -->
+<!--                                        간병인을 구해야 하지만, 간병인을 고용하게 되면 평균 비용은 하루에 10만원, 매월 300만원입니다. 웬만한 월급보다도 높은 간병비를 부담할 자신이 없는 엄마는 결국 다니던 직장을 그만둘 수 밖에 없었고, 이제는 온종일 아빠의 간병에 매달리고 있습니다. 아직까지 원인도 치료방법도 밝혀지지 않은 루게릭병. 언제까지 이러한 생활을 이어가야 할지도 알 수 없어 막막하지만, 엄마는 출근하는 대신 오늘도 24시간 꼬박 아빠의 곁을 지키고 있습니다.-->
+<!--                                    </dd>-->
+<!--                                </dl>-->
                             </li>
 
                         </ul>
