--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -91,29 +91,29 @@
 
                              <pre th:text="${volunteerWorkDetail.volunteerWorkContent}">서울아산병원 암통합진료센터에서 사전연명의료의향서 상담 및 작성업무 자원봉사자를 모집합니다.
 
-                                    1. 봉사기간 및 시간 (월, 목 中 1일 오후 상시, 종료기한 없음)
-                                    ㅇ 12시반~16시(오후)
+<!--                                    1. 봉사기간 및 시간 (월, 목 中 1일 오후 상시, 종료기한 없음)-->
+<!--                                    ㅇ 12시반~16시(오후)-->
 
-                                    2. 봉사내용
-                                    ㅇ 사전연명의료의향서 상담 예약 업무
-                                    ㅇ 사전연명의료의향서 상담 및 작성 업무( 종이서식/태블릿 PC로 작성)
+<!--                                    2. 봉사내용-->
+<!--                                    ㅇ 사전연명의료의향서 상담 예약 업무-->
+<!--                                    ㅇ 사전연명의료의향서 상담 및 작성 업무( 종이서식/태블릿 PC로 작성)-->
 
-                                    3. 자격요건
-                                    ㅇ 30세 이상 70세 이하 신체적, 정신적으로 건강한 성인
-                                    ㅇ 주 1회 정해진 요일에  3시간 이상 최소 6개월 이상 봉사 가능하신 분
-                                    ㅇ 사전연명의료의향서에 대한 상담 업무의 원할한 수행이 가능하신 분
-                                    ㅇ 연명의료결정제도의 목적과 의미를 이해하고 제반규정 준수가 가능하신 분
-                                    ㅇ 활동 전 5월에 국립연명의료기관 필수 온라인 교육 2회 포함하여 4회 이수 가능하신 분
-                                    (온라인 : 5/9, 자율 ,  원내 대면 : 5/17, 24일)
-                                    ㅇ 서울아산병원의 자원봉사자  규정 준수가 가능하신 분
+<!--                                    3. 자격요건-->
+<!--                                    ㅇ 30세 이상 70세 이하 신체적, 정신적으로 건강한 성인-->
+<!--                                    ㅇ 주 1회 정해진 요일에  3시간 이상 최소 6개월 이상 봉사 가능하신 분-->
+<!--                                    ㅇ 사전연명의료의향서에 대한 상담 업무의 원할한 수행이 가능하신 분-->
+<!--                                    ㅇ 연명의료결정제도의 목적과 의미를 이해하고 제반규정 준수가 가능하신 분-->
+<!--                                    ㅇ 활동 전 5월에 국립연명의료기관 필수 온라인 교육 2회 포함하여 4회 이수 가능하신 분-->
+<!--                                    (온라인 : 5/9, 자율 ,  원내 대면 : 5/17, 24일)-->
+<!--                                    ㅇ 서울아산병원의 자원봉사자  규정 준수가 가능하신 분-->
 
-                                    4. 봉사장소 : 서울아산병원 서관 1층 암통합진료센터 내 연명의료상담실
+<!--                                    4. 봉사장소 : 서울아산병원 서관 1층 암통합진료센터 내 연명의료상담실-->
 
-                                    5. 기타사항
-                                    ㅇ 봉사 확정은 실무 담당자  확인 후 결정됩니다.
-                                    ㅇ 원내 주차공간이 매우 협소하여 대중교통을 이용하여 주시기 바랍니다.
-                                    ㅇ 문의사항 : 암통합 진료센터 사회복지사(02-3010-2657)
-                                    ※ 모집 마감 후 담당자가 개별 연락드려 확정되오니 이해 부탁드립니다.
+<!--                                    5. 기타사항-->
+<!--                                    ㅇ 봉사 확정은 실무 담당자  확인 후 결정됩니다.-->
+<!--                                    ㅇ 원내 주차공간이 매우 협소하여 대중교통을 이용하여 주시기 바랍니다.-->
+<!--                                    ㅇ 문의사항 : 암통합 진료센터 사회복지사(02-3010-2657)-->
+<!--                                    ※ 모집 마감 후 담당자가 개별 연락드려 확정되오니 이해 부탁드립니다.-->
                                 </pre>
                          </div>
 
