--- a/src/main/resources/templates/mypage/rice-list.html
+++ b/src/main/resources/templates/mypage/rice-list.html
@@ -51,7 +51,7 @@
                     </span>
                         <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="/mypage/my-review" class="header-menu-a">작성한 게시물</a>
+                            <a href="/mypage/my-freeboard" class="header-menu-a">작성한 게시물</a>
                         </div>
                     </span>
                         <span class="header-menu-element">
@@ -98,7 +98,6 @@
             <table class="rice-table">
                 <thead>
                     <tr>
-                        <th>현재 공양미</th>
                         <th>충전/사용 공양미</th>
                         <th>결제시간</th>
                         <th>충전/사용/환전/후원받은 공양미 여부</th>
