--- a/src/main/resources/templates/mypage/my-review.html
+++ b/src/main/resources/templates/mypage/my-review.html
@@ -51,7 +51,7 @@
                     </span>
                         <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="/mypage/my-review" class="header-menu-a-select">작성한 게시물</a>
+                            <a href="/mypage/my-freeboard" class="header-menu-a-select">작성한 게시물</a>
                         </div>
                     </span>
                         <span class="header-menu-element">
@@ -109,7 +109,7 @@
                     <em class="my-review-count" th:text="${total}">50</em>개의 게시물이 있습니다.
                 </div>
                 <div class="my-review-list">
-                    <div>
+                    <!--<div>
                         <div class="review-header">
                             <div class="review-title">
                                 <div class="review-title-text">
@@ -166,7 +166,7 @@
                                 <span>자유게시판</span>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!--<div>
                         <div class="review-header">
                             <div class="review-title">
