--- a/src/main/resources/templates/mypage/rice-charge.html
+++ b/src/main/resources/templates/mypage/rice-charge.html
@@ -50,7 +50,7 @@
                     </span>
                         <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="/mypage/my-review" class="header-menu-a">작성한 게시물</a>
+                            <a href="/mypage/my-freeboard" class="header-menu-a">작성한 게시물</a>
                         </div>
                     </span>
                         <span class="header-menu-element">
