--- a/src/main/resources/templates/mypage/user-modify.html
+++ b/src/main/resources/templates/mypage/user-modify.html
@@ -50,7 +50,7 @@
                     </span>
                         <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="/mypage/my-review" class="header-menu-a">작성한 게시물</a>
+                            <a href="/mypage/my-freeboard" class="header-menu-a">작성한 게시물</a>
                         </div>
                     </span>
                         <span class="header-menu-element">
@@ -279,13 +279,14 @@
                                     </span>
                                 </label>
                                 <div class="drop-content">
-                                    <p>정</p>
-                                    <p>현</p>
-                                    <p>진</p>
-                                    <p>정</p>
-                                    <p>정</p>
-                                    <p>정</p>
-                                    <p>정</p>
+                                    <p>전문봉사</p>
+                                    <p>해외봉사</p>
+                                    <p>시설봉사</p>
+                                    <p>지역사회봉사</p>
+                                    <p>헌혈</p>
+                                    <p>재가봉사</p>
+                                    <p>금물품봉사</p>
+                                    <p>재능기부봉사</p>
                                 </div>
                             </div>
                             <div class="error-message">비워놓을 수 없습니다.</div>
