--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -33,6 +33,27 @@
         width: 30px;
         height: 41px;
     }
+    .notice__content {
+        display: flex;
+        font-weight: 600;
+        margin-top: 30px;
+        color: #777777;
+    }
+   textarea {
+       margin-top: -10px;
+       font-size: 18px;
+       color: #666;
+       line-height: 27px;
+       text-align: justify;
+       letter-spacing: -0.1px;
+       resize: none;
+       border: none;
+       outline: none;
+       font-weight: 400;
+       padding: 30px;
+       height: 480px;
+       width: 680px;
+    }
 
 </style>
 <body class="full">
@@ -49,7 +70,6 @@
             <div class="collect-wrap">
                 <div class="collect-content">
                     <h2 class="theme">
-                        <a class="theme" style="text-decoration:none" href="#">장애인 > 생계 및 기초생활지원</a>
                     </h2>
                     <h3 class="tit"  th:text="${supportRequestDTO.supportRequestTitle}">
                         아빠의 간병을 위해 엄마는 일을 정리했습니다
@@ -79,7 +99,10 @@
                         <ul class="intro-list editor-base">
                             <li>
                                 <dl>
-                                    <dt id="paragraph-title" th:text="${supportRequestDTO.supportRequestContent}">“아빠의 진단 이후, 가족의 삶이 달라졌어요.”</dt>
+<!--                                    <dt id="paragraph-title" th:text="${supportRequestDTO.supportRequestContent}">“아빠의 진단 이후, 가족의 삶이 달라졌어요.”</dt>-->
+                                    <div class="notice__content">
+                                       <textarea id="paragraph-title" th:text="${supportRequestDTO.supportRequestContent}"></textarea>
+                                    </div>
 <!--                                    <dd id="paragraph-content" >-->
 <!--                                        “아빠가 응급실로 실려 간 후, 상상도 못한 루게릭병이라는 진단을 받고 기관절개와 콧줄을 삽입하게 된 건 한순간이었어요. 가족끼리 대공원에 가자는 약속을 미루고만 있었는데, 아빠는 이제 움직일 수 없고, 대화도 할 수 없고 음식도 못 드시게 되어서 하루 종일 누워만 계세요.” -환우 가족의 루게릭병 수기공모전 수상작 ‘아빠, 사랑해요!’ 中-->
 <!--                                        <br> -->
