--- a/src/main/resources/templates/customerCenter/faq-detail2.html
+++ b/src/main/resources/templates/customerCenter/faq-detail2.html
@@ -25,13 +25,13 @@
                     <nav class="faq-detail-nav-wrap">
                         <ol class="faq-detail-nav-title">
                             <li title="텀블벅 헬프센터">
-                                <a href="/hc/ko">심봉사 헬프센터</a>
+                                <a href="/hc/ko">텀블벅 헬프센터</a>
                             </li>
                             <li title="주제별 도움말">
-                                <a href="/hc/ko/categories/115001047348-%EC%A3%BC%EC%A0%9C%EB%B3%84-%EB%8F%84%EC%9B%80%EB%A7%90">자주하는 질문</a>
+                                <a href="/hc/ko/categories/115001047348-%EC%A3%BC%EC%A0%9C%EB%B3%84-%EB%8F%84%EC%9B%80%EB%A7%90">주제별 도움말</a>
                             </li>
                             <li title="소통하고 전달하기">
-                                <a href="/hc/ko/sections/115002138508-%EC%86%8C%ED%86%B5%ED%95%98%EA%B3%A0-%EC%A0%84%EB%8B%AC%ED%95%98%EA%B8%B0">자주하는 질문</a>
+                                <a href="/hc/ko/sections/115002138508-%EC%86%8C%ED%86%B5%ED%95%98%EA%B3%A0-%EC%A0%84%EB%8B%AC%ED%95%98%EA%B8%B0">소통하고 전달하기</a>
                             </li>
                          </ol>
                     </nav>
@@ -41,27 +41,27 @@
                                 <section class="faq-detail-sidebar">
                                     <h3 class="faq-detail-sidebar-title">이 섹션의 문서</h3>
                                     <ul class="">
-                                    
+
                                         <li>
                                             <a th:href="@{/inquiry/faq-detail}" class="faq-detail-side-item">어떤 종류의 봉사활동이 있나요?</a>
                                         </li>
-                                    
+
                                         <li>
                                             <a th:href="@{/inquiry/faq-detail2}" class="faq-detail-side-item current-article">봉사활동을 하려면 나이 제한이 있나요?</a>
                                         </li>
-                                    
+
                                         <li>
                                             <a th:href="@{/inquiry/faq-detail3}" class="faq-detail-side-item ">후원자 명단은 어디에서 확인할 수 있나요? (후원자 관리)</a>
                                         </li>
-                                    
+
                                         <li>
                                             <a th:href="@{/inquiry/faq-detail4}" class="faq-detail-side-item ">공양미로 후원을 받는데, 후원받은 공양미만 환전을 할 수 있나요?</a>
                                         </li>
-                                    
+
                                         <li>
                                             <a th:href="@{/inquiry/faq-detail5}" class="faq-detail-side-item ">문의하기를 하면 통상적으로 몇일 안에 답변을 받을 수 있나요?</a>
                                         </li>
-
+                                    
                                     </ul>
                                     
                                 </section>
@@ -71,16 +71,19 @@
                                 <div class="faq-detail-article-main">
                                     <header class="faq-detail-header">
                                         <h2 title="펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?" class="faq-detail-title">
-                                            어떤 종류의 봉사활동이 있나요?
+                                            펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?
                                         </h2>
                                     </header>
                                 
                                     <section class="faq-detail-info">
                                         <div class="faq-detail-content">
                                             <div class="">
-                                                <p>봉사활동은 다양한 형태와 분야에서 이루어집니다.</p>
-                                                <p>일반적으로 사회복지, 교육, 환경, 동물보호, 의료, 문화 등 다양한 분야에서 봉사활동이 이루어집니다.</p>
-                                                <p>이 외에도 다양한 분야에서 봉사활동이 이루어지며, 자신의 관심사와 기술에 맞는 분야를 선택할 수 있습니다.</p>
+                                                <p>대부분의 봉사활동에는 나이 제한이 없습니다.</p>
+                                                <p> 봉사는 나이나 경험에 관계없이 누구나 참여할 수 있는 활동입니다.</p>
+                                                <p>어린이부터 청년, 중년, 노년까지 모두 봉사활동에 참여할 수 있습니다.</p>
+                                                <p>단, 일부 특정한 종류의 봉사활동은 연령 제한이 있을 수 있습니다.</p>
+                                                <p>이는 안전 문제나 특정 환경에서 요구되는 역량 등에 따라 결정될 수 있습니다.</p>
+                                                <p>하지만 많은 봉사 기관이 나이에 구애받지 않고 봉사자를 환영하고 있으며, 봉사에 참여하고자 하는 경우 주변의 봉사 기관이나 단체에 문의하여 자세한 정보를 얻을 수 있습니다.</p>
                                             </div>
                                         </div>
                                 </section>
