--- a/src/main/resources/templates/customerCenter/faq.html
+++ b/src/main/resources/templates/customerCenter/faq.html
@@ -35,23 +35,28 @@
                         </header>
                         <ul class="article_list">
                             <li class="article_list_item article_promoted">
-                                <a class="article_list_link">
-                                    모금액은 언제 정산되나요?
+                                <a class="article_list_link" th:href="@{/inquiry/faq-detail}">
+                                    어떤 종류의 봉사활동이 있나요?
                                 </a>
                             </li>
                             <li class="article_list_item article_promoted">
-                                <a class="article_list_link" href="/templates/customerCenter/faq-detail.html">
-                                    펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?
+                                <a class="article_list_link" th:href="@{/inquiry/faq-detail2}">
+                                    봉사활동을 하려면 나이 제한이 있나요?
                                 </a>
                             </li>
                             <li class="article_list_item article_promoted">
-                                <a class="article_list_link">
-                                    후원자 명단은 어디에서 확인할 수 있나요?(후원자 관리)
+                                <a class="article_list_link" th:href="@{/inquiry/faq-detail3}">
+                                    후원자 명단은 어디에서 확인할 수 있나요? (후원자 관리)
                                 </a>
                             </li>
-                            <li class="article_list_item article_promoted">
+                            <li class="article_list_item article_promoted" th:href="@{/inquiry/faq-detail4}">
                                 <a class="article_list_link">
-                                    배송 준비가 다 되었는데, 후원자의 배송지 수정을 마감할 수 있나요?
+                                    공양미로 후원을 받는데, 후원받은 공양미만 환전을 할 수 있나요?
+                                </a>
+                            </li>
+                            <li class="article_list_item article_promoted" th:href="@{/inquiry/faq-detail5}">
+                                <a class="article_list_link">
+                                    문의하기를 하면 통상적으로 몇일 안에 답변을 받을 수 있나요?
                                 </a>
                             </li>
 <!--                            <li class="article_list_item article_promoted">-->
