--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -188,7 +188,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a class="view-total-list-button view-total-list-button-color" href="/community/free-board/new">전체보기</a>
+                                <a class="view-total-list-button view-total-list-button-color" href="/ready">전체보기</a>
                             </div>
                             <div class="main-content-list-wrapper">
                                 <div class="container-component main-content-slider-banner-container">
@@ -204,7 +204,8 @@
                                                             <div></div>
                                                             <div class="volunteer-link-wrapper">
                                                                 <div class="volunteer-image-wrapper freeBoardImg">
-                                                                    <a th:href="@{/community/free-detail/{id}(id=${freeBoardList.id})}"></a>
+                                                                    <!--<a th:href="@{/community/free-detail/{id}(id=${freeBoardList.id})}"></a>-->
+                                                                    <a th:href="@{/ready/}"></a>
                                                                     <!-- <div class="like-button-wrapper">
                                                                         <button  class="like-button" type="button">
                                                                             <span>좋아요</span>
@@ -266,7 +267,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a class="view-total-list-button view-total-list-button-color" href="/funding/funding-list">전체보기</a>
+                                <a class="view-total-list-button view-total-list-button-color" href="/ready">전체보기</a>
                             </div>
                             <div class="main-content-list-wrapper">
                                 <div class="container-component main-content-slider-banner-container">
