문의 오류 수정, 봉사활동 사진부분, 관리자 게시판, 펀딩부분 막음

--- a/src/main/resources/templates/customerCenter/faq-detail2.html
+++ b/src/main/resources/templates/customerCenter/faq-detail2.html
@@ -71,7 +71,7 @@
                                 <div class="faq-detail-article-main">
                                     <header class="faq-detail-header">
                                         <h2 title="펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?" class="faq-detail-title">
-                                            펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?
+                                            봉사활동을 하려면 나이 제한이 있나요?
                                         </h2>
                                     </header>
                                 
