--- a/src/main/resources/templates/customerCenter/faq-detail3.html
+++ b/src/main/resources/templates/customerCenter/faq-detail3.html
@@ -71,7 +71,7 @@
                                 <div class="faq-detail-article-main">
                                     <header class="faq-detail-header">
                                         <h2 title="펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?" class="faq-detail-title">
-                                            펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?
+                                            후원자 명단은 어디에서 확인할 수 있나요? (후원자 관리)
                                         </h2>
                                     </header>
                                 
