후원 목록페이지 헤더 오류 수정완료

--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -113,8 +113,9 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="/js/main/header.js"></script>
 <script th:inline="javascript">
 </script>
 <script src="/js/support/support-list.js"></script>
-<script src="/js/customerCenter/inquiry-write.js"></script>
+<!--<script src="/js/customerCenter/inquiry-write.js"></script>-->
 </html>
