마이페이지 수정

--- a/src/main/resources/templates/customerCenter/inquiry-write.html
+++ b/src/main/resources/templates/customerCenter/inquiry-write.html
@@ -159,6 +159,7 @@
         setInterval(clock, 1000); // 1초마다 실행
 
     if($('.write-content-title').val() != 0 && $('.write-content-contents').val() != 0) {
+        console.log("inquiry 클릭됨");
         $('.inquiry-regist-btn').submit();
     }
 </script>
