--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -74,7 +74,7 @@
                     <h3 class="tit"  th:text="${supportRequestDTO.supportRequestTitle}">
                         아빠의 간병을 위해 엄마는 일을 정리했습니다
                     </h3>
-                    <ul class="collect-tab" id="collect-tab"></ul>
+<!--                    <ul class="collect-tab" id="collect-tab"></ul>-->
                     <div class="tab-cont">
                         <form name="donationForm" method="post">
                             <input type="hidden" name="paySeq">
