--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -293,14 +293,14 @@
                                                                     <dl>
                                                                         <dd class="volunteer-sub-info">
                                                                             <span>
-                                                                                <a th:href="@{/volunteer-work/work-detail/${fundingListOrderByPopularList.id}}" th:text="${fundingListOrderByPopularList.fundingCategory}">펀딩 카테고리</a>
+                                                                                <a href="#" th:text="${fundingListOrderByPopularList.fundingCategory}">펀딩 카테고리</a>
                                                                             </span>
                                                                             <span>
-                                                                                <a th:href="@{/volunteer-work/work-detail/${fundingListOrderByPopularList.id}}" th:text="${fundingListOrderByPopularList.fundingCreator.fundingCreatorNickname}">창작자이름</a>
+                                                                                <a href="#" th:text="${fundingListOrderByPopularList.fundingCreator.fundingCreatorNickname}">창작자이름</a>
                                                                             </span>
                                                                         </dd>
                                                                         <dt>
-                                                                            <a href="">
+                                                                            <a href="#">
                                                                                 <strong th:text="${fundingListOrderByPopularList.fundingTitle}">펀딩제목</strong>
                                                                             </a>
                                                                         </dt>
@@ -370,6 +370,8 @@
     // let volunteerFile = [[${volunteerFileDTO}]];
     let volunteerList = [[${volunteerList}]];
     let freeboardFile = [[${freeBoardFileDTO}]];
+    let fundingListOrderByPopularList = [[${fundingListOrderByPopularList}]];
+    console.log(fundingListOrderByPopularList);
 
 </script>
 <script th:inline="javascript">
