--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -69,7 +69,7 @@
                                         <span class="cruit" >[후원요청]</span>
                                         <span class="last-date-text" th:name="supportRequestId" th:text="${supportRequest.id}">3</span>번 게시물
                                     </div>
-                                    <div class="title" th:text="${supportRequest.supportRequestContent}">서울시 환경정화 봉사자 모집</div>
+                                    <div class="title" th:text="${supportRequest.supportRequestTitle}">서울시 환경정화 봉사자 모집</div>
                                     <div class="dates">
                                         <span class="dates-text" th:text="'모인 공양미 : ' + ${supportRequest.totalSupportPrice} + '석'" >[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                     </div>
