더미데이터 넣는 중

--- a/src/main/resources/templates/admin/sponsorship-request.html
+++ b/src/main/resources/templates/admin/sponsorship-request.html
@@ -305,8 +305,8 @@
                             <div class="user__profile__input volunteer_input">
                                 <input type="text" name="" value="회원번호" readonly="true"/>
                                 <input type="text" name="" value="이름" readonly="true"/>
-                                <input type="text" name="" value="전화번호" readonly="true"/>
-                                <input type="text" name="" value="아이디" readonly="true"/>
+                                <input type="text" name="" value="이메일" readonly="true"/>
+                                <input type="text" name="" value="후원 금액" readonly="true"/>
                             </div>
                         </div>
                         <div class="append-div"></div>
