--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -272,15 +272,27 @@
                             </div>
                         </div>
                         <div class="user__profile">
+                            <h5>이름</h5>
+                            <div class="user__profile__input">
+                                <input type="text" id="name" name="memberName" value="홍길동" readonly/>
+                            </div>
+                        </div>
+                        <div class="user__profile">
                             <h5>나이</h5>
                             <div class="user__profile__input">
                                 <input type="text" id="age" name="memberAge" value="24" readonly/>
                             </div>
                         </div>
                         <div class="user__profile">
+                            <h5>주소</h5>
+                            <div class="user__profile__input">
+                                <input type="text" id="address" name="memberAddress" value="주소" readonly/>
+                            </div>
+                        </div>
+                        <div class="user__profile">
                             <h5>관심 봉사</h5>
                             <div class="user__profile__input">
-                                <input type="text" id="interest" name="memberInterest" value="관심 봉사"/>
+                                <input type="text" id="interest" name="memberInterest" value="관심 봉사" readonly/>
                             </div>
                         </div>
                         <div class="user__profile">
@@ -293,21 +305,9 @@
                     <div class="modal__profile__bottom">
                         <h4>수정 가능</h4>
                         <div class="user__profile">
-                            <h5>이름</h5>
-                            <div class="user__profile__input">
-                                <input type="text" id="name" name="memberName" value="홍길동"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
                             <h5>공양미 갯수</h5>
                             <div class="user__profile__input">
                                 <input type="text" id="rice" name="memberRice" value="3000개"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5>주소</h5>
-                            <div class="user__profile__input">
-                                <input type="text" id="address" name="memberAddress" value="주소"/>
                             </div>
                         </div>
                         <div class="user__profile">
