--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -265,7 +265,7 @@
                             </div>
                         </div>
                         <div class="user__profile">
-                            <h5>봉시시간</h5>
+                            <h5>봉시인정시간</h5>
                             <div class="user__profile__input">
                                 <input type="text" name="volunteerWorkTime" placeholder="6"/>
                             </div>
