--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>후원목록</title>
+    <title>봉사목록</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/support/support-list.css">
     <link rel="stylesheet" href="/css/support/support-list-response.css">
