--- a/src/main/resources/templates/admin/free-board.html
+++ b/src/main/resources/templates/admin/free-board.html
@@ -23,7 +23,7 @@
     <!-- content.css -->
     <section class="content">
         <div class="content__header">
-            <span>봉사 모집 자유게시판 관리</span>
+            <span>자유게시판 관리</span>
             <a href="/member/logout"> 로그아웃 </a>
         </div>
         <main class="content__main">
