--- a/src/main/resources/templates/admin/component/sidebar.html
+++ b/src/main/resources/templates/admin/component/sidebar.html
@@ -262,7 +262,7 @@
           </svg>
         </a>
         <!-- 활동 후기 -->
-        <a th:href="@{/ready-admin}" class="sidebar__menu">
+        <a th:href="@{/admin/activity-review-board}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
@@ -284,7 +284,7 @@
           </svg>
         </a>
         <!-- 자유게시판 관리 -->
-        <a th:href="@{/ready-admin}" class="sidebar__menu">
+        <a th:href="@{/admin/free-board}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <?xml version="1.0" ?><svg data-name="Layer 1" id="Layer_1" viewBox="0 0 512 512"
