--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -36,9 +36,34 @@
                     </div>
                     <div class="review-contant">
                         <div class="review-post">
-                            <div class="img-wrapper">
-                                <img src="https://steadio.imgix.net/creator-posts/079d1a28-343d-4f6a-8889-e9328964aafd/creatorPostImage/269f44f6-9d34-47bb-83a2-7d99d86a5280.jpg?auto=format%2Ccompress&fit=max&lossless=true&w=1240">
+                            <div class="thumbnail-section" style="visibility: visible;">
+                                <div class="view">
+                                    <img id="expandedImg" src="" style="cursor:pointer; width:624px; height:351px;">
+                                </div>
+                                <div class="thumbnail-list">
+                                    <ul>
+<!--                                        <li class="on">-->
+<!--                                            <button href="#">-->
+<!--                                                <img class="img-div" src="/image/notice/rag_doll_tumbnail.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">-->
+<!--                                            </button>-->
+<!--                                        </li>-->
+<!--                                        <li class="on">-->
+<!--                                            <button href="#">-->
+<!--                                                <img class="img-div" src="image/main/001.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">-->
+<!--                                            </button>-->
+<!--                                        </li>-->
+<!--                                        <li class="on">-->
+<!--                                            <button href="#">-->
+<!--                                                <img class="img-div" src="/image/main/002.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">-->
+<!--                                            </button>-->
+<!--                                        </li>-->
+                                    </ul>
+                                </div>
                             </div>
+<!--                            <div class="img-wrapper">-->
+<!--&lt;!&ndash;                                <img src="https://steadio.imgix.net/creator-posts/079d1a28-343d-4f6a-8889-e9328964aafd/creatorPostImage/269f44f6-9d34-47bb-83a2-7d99d86a5280.jpg?auto=format%2Ccompress&fit=max&lossless=true&w=1240">&ndash;&gt;-->
+<!--                                <img th:if="${freeBoardDTO.fileDTOS.getSize != 0}" th:src="@{/file/display(fileName=${result.fileDTOS.get(0).filePath})}">-->
+<!--                            </div>-->
                         </div>
                         <p th:text="${freeBoardDTO.boardContent}">내용</p>
                         <div style="height: 40px;"></div>
