자유게시판 무한스크롤 완료

--- a/src/main/resources/templates/community/free-board.html
+++ b/src/main/resources/templates/community/free-board.html
@@ -43,13 +43,13 @@
             <div class="categori-wrapper">
                 <div class="categori-wrapper">
                     <label class="categori-label">
-                        <span class="categori-new">최신글</span>
+                        <span class="categori-new categori-content">최신글</span>
                     </label>
                 </div>
                 <div class="categori-wrapper">
                     <span class="categori-wrapper-span"></span>
                     <label class="categori-label2">
-                        <span class="categori-best">인기글</span>
+                        <span class="categori-best categori-content">인기글</span>
                     </label>
                 </div>
             </div>
