--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -32,7 +32,7 @@
 
         <div class="header">
             <div class="header-container">
-                <a href="/community/free-board/new">
+                <a href="/community/free-board">
                     <span class="header-title2">자유</span>
                 </a>
                 <span class="header-title1">활동후기</span>
@@ -43,13 +43,13 @@
                 <div class="categori-wrapper">
                     <div class="categori-wrapper">
                         <label class="categori-label">
-                            <span class="categori-new">최신글</span>
+                            <span class="categori-new categori-content">최신글</span>
                         </label>
                     </div>
                     <div class="categori-wrapper">
                         <span class="categori-wrapper-span"></span>
                         <label class="categori-label2">
-                            <span class="categori-best">인기글</span>
+                            <span class="categori-best categori-content">인기글</span>
                         </label>
                     </div>
                 </div>
